# cac

./: .gitignore  README.md  cac  package.json
.github/workflows/: ci.yml  rust-ci.yml
docs/: changelog.mdx
docs/superpowers/plans/: 2026-03-23-rust-refactor-implementation.md  2026-03-25-ccp-transparent-capture-status.md
docs/superpowers/specs/: 2026-03-23-rust-refactor-design.md
docs/zh/: changelog.mdx
rust/: Cargo.toml  README.md
rust/apps/ccp/: Cargo.toml
rust/apps/ccp-desktop/: index.html  package-lock.json  package.json
rust/apps/ccp-desktop/src/: App.tsx  i18n.ts
rust/apps/ccp-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rust/apps/ccp-desktop/src-tauri/src/: capture_manager.rs  lib.rs  main.rs  mitmproxy_backend.rs  tray.rs
rust/apps/ccp-desktop/src-tauri/src/commands/: mod.rs
rust/apps/ccp-desktop/src/components/: Diagnostics.tsx  ImportExport.tsx  ProfileDetail.tsx  ProfileForm.tsx  ProfileList.tsx  RequestDetail.tsx  SetupAssistant.tsx  Sidebar.tsx  StatusBar.tsx
rust/apps/ccp-desktop/src/locales/: en.json  zh-CN.json
rust/apps/ccp-desktop/src/pages/: Dashboard.tsx  Settings.tsx  TrafficCapture.tsx
rust/apps/ccp/src/: audit.rs  install.rs  lib.rs  main.rs
rust/crates/adapters/claude/: Cargo.toml
rust/crates/adapters/claude/src/: env.rs  lib.rs  policy.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: adapter.rs  capability.rs  launch_plan.rs  lib.rs  policy.rs  profile.rs
rust/crates/doctor/: Cargo.toml
rust/crates/doctor/src/: checks.rs  lib.rs  report.rs
rust/crates/launcher/: Cargo.toml
rust/crates/launcher/src/: builder.rs  env_plan.rs  exec.rs  lib.rs  session.rs
rust/crates/platform-linux/: Cargo.toml
rust/crates/platform-linux/src/: lib.rs
rust/crates/platform-macos/: Cargo.toml
rust/crates/platform-macos/src/: lib.rs
rust/crates/platform-windows/: Cargo.toml
rust/crates/platform-windows/src/: lib.rs
rust/crates/runtime-hooks/node/: Cargo.toml
rust/crates/runtime-hooks/node/src/: bundle.rs  lib.rs
rust/crates/sidecar/: Cargo.toml
rust/crates/sidecar-proto/: Cargo.toml
rust/crates/sidecar-proto/src/: lib.rs  session.rs
rust/crates/sidecar/src/: capture.rs  egress.rs  lib.rs  proxy.rs  server.rs  session.rs
rust/crates/store/: Cargo.toml
rust/crates/store/src/: blocked_hosts_store.rs  cert_store.rs  claude_config_store.rs  error.rs  identity_store.rs  layout.rs  lib.rs  mitm_trust.rs  profile_store.rs  runtime_state_store.rs  secret_store.rs  shim_store.rs
rust/docs/: coverage-matrix.md  legacy-code-checklist.md
rust/docs/superpowers/plans/: 2026-03-25-http2-streaming-mitm-capture.md  2026-03-25-mitm-capture.md
rust/docs/superpowers/specs/: 2026-03-25-mitm-capture-design.md
rust/hooks/node/: claude-preload.js
rust/tests/e2e/: run_claude_smoke.rs
rust/tests/fixtures/: fake_claude.js
rust/tests/integration/: claude_adapter.rs  cli_profile.rs  launch_plan.rs
scripts/: test-socks5h-probes.sh
src/: cmd_check.sh  cmd_env.sh  utils.sh
