[workspace]
members = [
  "apps/ccp",
  "crates/core",
  "crates/store",
  "crates/launcher",
  "crates/doctor",
  "crates/sidecar-proto",
  "crates/sidecar",
  "crates/adapters/claude",
  "crates/runtime-hooks/node",
  "crates/platform-macos",
  "crates/platform-linux",
  "crates/platform-windows",
]
resolver = "2"
