[package]
name = "ccp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
core = { path = "../../crates/core" }
doctor = { path = "../../crates/doctor" }
serde_json = "1"
store = { path = "../../crates/store" }
launcher = { path = "../../crates/launcher" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "2"
sidecar = { path = "../../crates/sidecar" }

[[test]]
name = "cli_profile"
path = "../../tests/integration/cli_profile.rs"

[[test]]
name = "launch_plan"
path = "../../tests/integration/launch_plan.rs"
