[package]
name = "ccp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
claude-adapter = { path = "../../crates/adapters/claude" }
core = { path = "../../crates/core" }
doctor = { path = "../../crates/doctor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
store = { path = "../../crates/store" }
launcher = { path = "../../crates/launcher" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "2"
sidecar = { path = "../../crates/sidecar" }
claude-adapter = { path = "../../crates/adapters/claude" }

[[test]]
name = "cli_profile"
path = "../../tests/integration/cli_profile.rs"

[[test]]
name = "launch_plan"
path = "../../tests/integration/launch_plan.rs"

[[test]]
name = "claude_adapter"
path = "../../tests/integration/claude_adapter.rs"

[[test]]
name = "run_claude_smoke"
path = "../../tests/e2e/run_claude_smoke.rs"
