[package]
name = "doctor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
claude-adapter = { path = "../adapters/claude" }
core = { path = "../core" }

[target.'cfg(target_os = "macos")'.dependencies]
platform-macos = { path = "../platform-macos" }

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux = { path = "../platform-linux" }

[target.'cfg(target_os = "windows")'.dependencies]
platform-windows = { path = "../platform-windows" }
