[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
core = { path = "../core" }
h2 = "0.4"
http = "1"
rcgen = { version = "0.14", features = ["pem", "crypto", "x509-parser", "aws_lc_rs"] }
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sidecar-proto = { path = "../sidecar-proto" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
