[package]
name = "store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
core = { path = "../core" }
rcgen = { version = "0.14", features = ["pem", "crypto", "x509-parser", "aws_lc_rs"] }
serde_json = "1.0"
tempfile = "3"
time = { version = "0.3", features = ["std"] }
uuid = { version = "1", features = ["v4"] }
